# rust-mandelbrot

./: .gitignore  Cargo.toml  README.md  colors.txt
color_paletes/: bluish.txt
src/: brot.rs  constants.rs  helper.rs  main.rs
