[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Duco Lindhout <duco.lindhout@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "*"
image = "0.23.10"
raster = "0.2.0"
gif = "0.11.2"

[features]
default = ["non-linear"]
linear = []
non-linear = []